refactor flight : apply airportcode to domain, dto